--- a/BrokerTec/src/App.css
+++ b/BrokerTec/src/App.css
@@ -4,39 +4,36 @@
   padding: 2rem;
   text-align: center;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+#container_home {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+#container_buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+#login {
+  background-color: aquamarine;
+  border-radius: 20px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+  text-shadow: 0 0 2px rgba(255, 255, 255, 0.5);
 }
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+#login:hover {
+  background-color: #007bff;
+  color: #fff;
+  transform: scale(1.2);
 }
 
-.card {
-  padding: 2em;
+#signup {
+  background-color: aquamarine;
+  border-radius: 20px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+  text-shadow: 0 0 2px rgba(255, 255, 255, 0.5);
 }
-
-.read-the-docs {
-  color: #888;
+#signup:hover {
+  background-color: #007bff;
+  color: #fff;
+  transform: scale(1.2);
 }
