organizo los enrutamientos y establezco el home y creo la screen donde va el sign up

--- a/BrokerTec/src/App.css
+++ b/BrokerTec/src/App.css
@@ -37,3 +37,8 @@
   color: #fff;
   transform: scale(1.2);
 }
+#container_signup {
+  display: flex;
+  flex-direction: column;
+  background-color: aquamarine;
+}
