--- a/BrokerTec/src/App.css
+++ b/BrokerTec/src/App.css
@@ -8,6 +8,9 @@
   display: flex;
   flex-direction: column;
   background-color: burlywood;
+  text-align: center;
+  width: 600px;
+  height: 300px;
 }
 #container_buttons {
   display: flex;
@@ -41,5 +44,104 @@
 #container_signup {
   display: flex;
   flex-direction: column;
-  background-color: white;
+  text-align: center;
+  align-items: center;
+  background-color: darkgray;
+  width: 600px;
+  height: 550px;
+}
+#container_formulario {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  text-align: center;
+  align-items: center;
+  background-color: darkgray;
+  width: 550px;
+  height: 50px;
+}
+#container_header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  text-align: center;
+  align-items: center;
+  background-color: darkgray;
+  width: 550px;
+  height: 80px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+#foto_perfil {
+  width: 70px;
+  height: 70px;
+  border-radius: 40px;
+}
+#nombre {
+  color: black;
+  width: 150px;
+  height: 20px;
+}
+#apellido {
+  color: black;
+  width: 150px;
+  height: 20px;
+}
+#email {
+  color: black;
+  width: 200px;
+  height: 20px;
+}
+#tel {
+  color: black;
+  width: 200px;
+  height: 20px;
+}
+#search {
+  color: black;
+  width: 222px;
+  height: 25px;
+}
+#pais {
+  color: black;
+  width: 180px;
+  height: 20px;
+}
+#ciudad {
+  color: black;
+  width: 190px;
+  height: 20px;
+}
+#postal {
+  color: black;
+  width: 150px;
+  height: 20px;
+}
+#contraseña {
+  color: black;
+  width: 200px;
+  height: 25px;
+}
+#cancelar {
+  background-color: aquamarine;
+  border-radius: 20px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+  text-shadow: 0 0 2px rgba(255, 255, 255, 0.5);
+}
+#cancelar:hover {
+  background-color: rgb(172, 15, 15);
+  color: #fff;
+  transform: scale(1.2);
+}
+#aceptar {
+  background-color: aquamarine;
+  border-radius: 20px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+  text-shadow: 0 0 2px rgba(255, 255, 255, 0.5);
+}
+#aceptar:hover {
+  background-color: green;
+  color: #fff;
+  transform: scale(1.2);
 }
